[gd_scene load_steps=9 format=2]

[ext_resource path="res://Particle.png" type="Texture" id=1]
[ext_resource path="res://Part.png" type="Texture" id=2]
[ext_resource path="res://Pixeboy-z8XGD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/WinScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 1, 0.191406, 0.222992, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0.0352941, 1 )
scale = Vector2( 5000, 5000 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 168.0
margin_top = 232.0
margin_right = 898.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.815686, 1, 0.105882, 1 )
text = "yayy saved!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 168.0
margin_top = 358.0
margin_right = 512.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.478431, 0.780392, 0.172549, 1 )
text = "Time: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 168.0
margin_top = 464.0
margin_right = 512.0
margin_bottom = 616.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.478431, 0.780392, 0.172549, 1 )
text = "Best Time : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 520.0
margin_top = 368.0
margin_right = 864.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.976471, 0.933333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer"]
margin_left = 744.0
margin_top = 456.0
margin_right = 1088.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.976471, 0.933333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 520, 152 )
amount = 15
lifetime = 4.0
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
